# fastscoop

./: .gitignore  Cargo.toml  LICENSE  README.md  a.nu  rustfmt.toml
.github/: dependabot.yml
src/: main.rs
