[package]
name = "fastscoop"
version = "0.2.0"
description = "A fast, drop-in replacement for `scoop search`."
edition = "2024"
license = "MIT"
repository = "https://github.com/trypsynth/fastscoop"
rust-version = "1.88.0"
readme = "README.md"
keywords = ["scoop", "search", "windows", "package-manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
ureq = { version = "3.1.4", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
